--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,18 @@ certifi==2018.4.16
 chardet==3.0.4
 huobitrade==0.1.9
 idna==2.6
+mysqlclient==1.3.12
+numpy==1.14.4
+pandas==0.23.0
+prodconpattern==0.1.1
 pymongo==3.6.1
 python-dateutil==2.7.3
+pytz==2018.4
 pyzmq==17.0.0
+redis==2.10.6
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.8
 urllib3==1.22
 websocket-client==0.48.0
+xlrd==1.1.0
